name:                nylas
version:             0.1.0.0
synopsis:            Client for the Nylas API
description:         A client for the Nylas HTTP API, powered by lens and pipes.
homepage:            bts@gmail.com
license:             BSD3
license-file:        LICENSE
author:              Brian Schroeder
maintainer:          bts@gmail.com
copyright:           2015, Brian Schroeder
category:            Network, API
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/bts/nylas-hs
bug-reports:         https://github.com/bts/nylas-hs/issues
-- extra-sourcefiles:

source-repository head
  type: git
  location: git://github.com/bts/nylas.git

library
  exposed-modules:     Network.Nylas, Network.Nylas.Types
  build-depends:       base >= 4.8            && < 4.9
                     , text >= 1.2.1.1        && < 1.3
                     , aeson >= 0.9.0.1       && < 0.10
                     , lens >= 4.5            && < 5.0
                     , lens-aeson >= 1.0.0.4  && < 1.1
                     , wreq >= 0.4.0.0        && < 0.5
                     , bytestring >= 0.10.6.0 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  -- other-modules:
  -- other-extensions: